[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/UI/Level Failed UI.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/HiOutline-8wy2.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/UI/cooluitheme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 91
font_data = ExtResource( 2 )

[node name="Level Failed UI" type="Control" groups=["Level Status Recievers"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
retry_button_node = NodePath("Panel/VBoxContainer/Retry Button")
exit_button_node = NodePath("Panel/VBoxContainer/Exit Button")

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 930.0
margin_bottom = 187.0
custom_fonts/font = SubResource( 1 )
text = "LEVEL
FAILED"
align = 1

[node name="Retry Button" type="Button" parent="Panel/VBoxContainer"]
margin_top = 191.0
margin_right = 930.0
margin_bottom = 348.0
size_flags_vertical = 3
theme = ExtResource( 3 )
text = "Try Again?"

[node name="Exit Button" type="Button" parent="Panel/VBoxContainer"]
margin_top = 352.0
margin_right = 930.0
margin_bottom = 510.0
size_flags_vertical = 3
theme = ExtResource( 3 )
text = "Exit"

[connection signal="visibility_changed" from="." to="." method="_on_Level_Failed_UI_visibility_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/Retry Button" to="." method="_on_Retry_Button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Exit Button" to="." method="_on_Exit_Button_pressed"]
